@@ -242,6 +242,8 @@ version 26-git (????-??-??):
     (not defined by default what means to use hardcoded title) [chilan]
   - enhancement: lms-rtparser.php backend script support imap mode [chilan]
   - improvement: alternative invoice deadline selection counted in days for convenience [chilan]
+  - enhancement: added support for CC mail headers while communicate through helpdesk
+    with customer [chilan]
 
 version 25.0 (2020-05-15):
 
